# hpd-handheld-power-daemon

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  install.sh  rust-toolchain.toml  uninstall.sh
.cargo/: config.toml
.github/workflows/: aur-sync.yml  ci.yml  release.yml
crates/hpd-backend-asus/: Cargo.toml  README.md
crates/hpd-backend-asus/src/: charge.rs  detect.rs  fan.rs  fan_curve.rs  gpu_clock.rs  hwmon.rs  lib.rs  power.rs  power_supply.rs  profile.rs  telemetry.rs  thermal.rs
crates/hpd-backend-lenovo/: Cargo.toml
crates/hpd-backend-lenovo/src/: detect.rs  lib.rs  power.rs
crates/hpd-backend-valve/: Cargo.toml
crates/hpd-backend-valve/src/: detect.rs  lib.rs  power.rs
crates/hpd-capabilities/: Cargo.toml  README.md
crates/hpd-capabilities/src/: backend.rs  charge.rs  error.rs  fan.rs  fan_curve.rs  gpu_clock.rs  lib.rs  platform_profile.rs  power.rs  probe.rs  profile.rs  telemetry.rs  testing.rs  thermal.rs  units.rs
crates/hpd-cli/: Cargo.toml  README.md
crates/hpd-cli/src/: dbus.rs  doctor.rs  fix.rs  main.rs
crates/hpd-core/: Cargo.toml  README.md
crates/hpd-core/src/: effect.rs  executor.rs  inference.rs  invariants.rs  lib.rs  persistence.rs  reducer.rs  state.rs  transition.rs
crates/hpd-core/tests/: executor_e2e.rs
crates/hpd-daemon/: Cargo.toml  README.md
crates/hpd-daemon/src/: config.rs  main.rs  probe.rs  suspend.rs
crates/hpd-dbus/: Cargo.toml  README.md
crates/hpd-dbus-client/: Cargo.toml
crates/hpd-dbus/src/: actions.rs  conflicts.rs  lib.rs  polkit.rs  ppd_shim.rs  service.rs
crates/hpd-error/: Cargo.toml  README.md
crates/hpd-error/src/: lib.rs
crates/hpd-netlink/: Cargo.toml  README.md
crates/hpd-netlink/src/: lib.rs
crates/hpd-sysfs/: Cargo.toml  README.md
crates/hpd-sysfs/src/: error.rs  io.rs  lib.rs  mock.rs  real.rs
docs/: ARCHITECTURE.md  COOLING-es.md  DIAGRAMS-es.md  DIAGRAMS.md  MANUAL-es.md  MANUAL.md  fan-curves.md
docs/decky-plugin/: DESIGN.md  POLKIT-SETUP-PROMPT.md  V2-INTEGRATION.md
docs/dev/: AUDITORIA-2026-07-es.md  FAN_CURVE_TESTING.md  GAMING-ROADMAP-es.md  LIFECYCLE.md  LINUX.md  MACOS.md  PERF-BASELINE-RC73XA.md  POWER-ENFORCEMENT-GAPS.md  cooling-sample.fish
docs/release/: PIPELINE.md  RELEASE_CHECKLIST.md  VERSIONING.md
package/: dev.cirodev.hpd.conf  hpd-example.toml  hpd.service
package/aur/: PKGBUILD-bin.template  PKGBUILD.template  hpd.install
package/polkit/: 49-hpd.rules  dev.cirodev.hpd.policy
scripts/: aur-sync.sh  doctor.sh  extract-changelog-section.sh  fan-characterize.sh  fan-tune.sh
