[workspace]
resolver = "2"
members = [
    # L-1 - Cross-cutting types (no internal deps)
    "crates/hpd-error",

    # L0 - Kernel I/O
    "crates/hpd-sysfs",
    "crates/hpd-netlink",

    # L2 - Capabilities (L2 before L1 because L1 depends on L2)
    "crates/hpd-capabilities",

    # L1 - Backends
    "crates/hpd-backend-asus",

    # L3 - Domain / Core
    "crates/hpd-core",

    # L4 - Interfaces & Daemon
    "crates/hpd-dbus",
    "crates/hpd-cli",
    "crates/hpd-daemon"
]

# Shared package metadata. Every crate's `[package]` block opts in via
# `<key>.workspace = true` so version / license / MSRV / repo links
# stay in one place. Bumping a release becomes a single edit here.
[workspace.package]
version      = "1.0.0"
edition      = "2021"
license      = "GPL-3.0-or-later"
authors      = ["Cristian Ciro <cristian_ciro@outlook.es>"]
repository   = "https://github.com/CiroDev-Git/hpd-handheld-power-daemon"
homepage     = "https://github.com/CiroDev-Git/hpd-handheld-power-daemon"

[workspace.dependencies]
# Error handling (rule: zero unwrap, explicit errors).
thiserror = "1.0"

# Logging — tracing core + the subscriber the daemon installs at startup.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime + D-Bus + udev. zbus stays at 4.x; tokio is pinned to a
# specific minor because the executor's MSRV depends on it. tokio-udev
# is only pulled in by hpd-netlink under cfg(target_os = "linux").
tokio        = { version = "1.36", features = ["full"] }
zbus         = "4.1"
tokio-udev   = "0.7"
futures-util = "0.3"

# Parsing & serialization.
serde = { version = "1.0", features = ["derive"] }
toml  = "0.8"

# CLI argument parsing — only consumed by hpd-cli.
clap = { version = "4.4", features = ["derive"] }

# Test-only fixture deps. `tempfile` is the on-disk root for MockSysfs;
# pulled in optionally by hpd-sysfs behind its `mock` feature.
tempfile = "3.10"