[workspace]
resolver = "2"
members = [
    # L-1 - Cross-cutting types (no internal deps)
    "crates/hpd-error",

    # L0 - Kernel I/O
    "crates/hpd-sysfs",
    "crates/hpd-netlink",

    # L2 - Capabilities (L2 before L1 because L1 depends on L2)
    "crates/hpd-capabilities",

    # L1 - Backends
    "crates/hpd-backend-asus",

    # L3 - Domain / Core
    "crates/hpd-core",

    # L4 - Interfaces & Daemon
    "crates/hpd-dbus",
    "crates/hpd-cli",
    "crates/hpd-daemon"
]

# Shared package metadata. Every crate's `[package]` block opts in via
# `<key>.workspace = true` so version / license / MSRV / repo links
# stay in one place. Bumping a release becomes a single edit here.
[workspace.package]
version      = "2.7.0"
edition      = "2021"
license      = "GPL-3.0-or-later"
authors      = ["Cristian Ciro <cristian_ciro@outlook.es>"]
repository   = "https://github.com/CiroDev-Git/hpd-handheld-power-daemon"
homepage     = "https://github.com/CiroDev-Git/hpd-handheld-power-daemon"
# Minimum supported Rust version. Bumping this requires updating the
# matching pin in `rust-toolchain.toml` so contributors and CI stay
# in lockstep. 1.85 was chosen because it covers the
# [workspace.lints] floor (Rust 1.74), allows modern syntax, and is
# old enough that every reasonable distro's packaged toolchain
# meets it.
rust-version = "1.85"

[workspace.dependencies]
# Error handling (rule: zero unwrap, explicit errors).
thiserror = "1.0"

# Logging — tracing core + the subscriber the daemon installs at startup.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime + D-Bus + udev. zbus stays at 4.x; tokio is pinned to a
# specific minor because the executor's MSRV depends on it. tokio-udev
# is only pulled in by hpd-netlink under cfg(target_os = "linux").
tokio        = { version = "1.36", features = ["full"] }
zbus         = "4.1"
tokio-udev   = "0.7"
futures-util = "0.3"

# Parsing & serialization.
serde = { version = "1.0", features = ["derive"] }
toml  = "0.8"

# CLI argument parsing — only consumed by hpd-cli.
clap = { version = "4.4", features = ["derive"] }

# Test-only fixture deps. `tempfile` is the on-disk root for MockSysfs;
# pulled in optionally by hpd-sysfs behind its `mock` feature.
tempfile = "3.10"

# Workspace-wide lint policy. Every crate opts in via `[lints] workspace = true`
# in its own manifest, replacing the 9 copies of
# `#![cfg_attr(not(test), warn(clippy::unwrap_used, …))]` that used to sit
# on every crate root. Bumping the policy is now a single-line edit.
#
# `unsafe_code = "forbid"` replaces the previous `.cargo/config.toml`
# rustflags entry — same enforcement, expressed via the language's own
# lint table instead of a compiler flag. If a future crate genuinely
# needs `unsafe`, it should opt out with its own per-crate
# `#![allow(unsafe_code)]` and document the reason.
#
# `clippy::unwrap_used` / `expect_used` / `panic` are `warn` here and
# upgraded to errors by CI's `-D warnings`. Test modules opt out
# locally with an inner `#![allow(...)]` so the strict bar applies to
# production code only.
[workspace.lints.rust]
unsafe_code  = "forbid"
# Every public item must carry a `///` doc-comment, and every module
# file must open with a `//!` block. CI runs with `-D warnings`, so
# this is effectively an error in CI. Suppressed locally on the few
# items the zbus `#[interface]` macro synthesises without a span we
# can attach docs to (see `hpd-dbus/src/service.rs`).
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic       = "warn"