[package]
name = "hpd-backend-asus"
version = "0.1.0"
edition = "2021"

[dependencies]
hpd-capabilities = { path = "../hpd-capabilities" }
hpd-sysfs = { path = "../hpd-sysfs" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hpd-sysfs = { path = "../hpd-sysfs", features = ["mock"] }