[package]
name                 = "hpd-backend-asus"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true
description          = "ASUS armoury firmware-attribute backend for hpd (layer L1): TDP, charge, profile, fan."

[dependencies]
hpd-capabilities = { path = "../hpd-capabilities" }
hpd-sysfs = { path = "../hpd-sysfs" }

[dev-dependencies]
hpd-sysfs = { path = "../hpd-sysfs", features = ["mock"] }
