[package]
name                 = "hpd-backend-lenovo"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
description          = "Lenovo Legion Go backend placeholder for hpd (layer L1); slated for removal in Lote 26."

[dependencies]
hpd-capabilities = { path = "../hpd-capabilities" }
hpd-sysfs = { path = "../hpd-sysfs" }
thiserror = { workspace = true }
tracing = { workspace = true }
