[package]
name                 = "hpd-capabilities"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true
description          = "Hardware-agnostic capability traits and value types for hpd (layer L2)."

[features]
default = []
# Exposes `testing::MockBackend` for downstream integration tests (e.g. hpd-core).
# Pure additive: no extra runtime deps required.
testing = []

[dependencies]
hpd-error = { path = "../hpd-error" }
serde = { workspace = true }

[lints]
workspace = true
