[package]
name                 = "hpd-cli"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
description          = "hpdctl — user-facing CLI client for the hpd daemon (layer L4)."

# Force binary name to hpdctl
[[bin]]
name = "hpdctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
zbus = "4.1"
tokio = { workspace = true, features = ["full"] }
