[package]
name                 = "hpd-cli"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true
description          = "hpdctl — user-facing CLI client for the hpd daemon (layer L4)."

# Force binary name to hpdctl
[[bin]]
name = "hpdctl"
path = "src/main.rs"

[dependencies]
clap  = { workspace = true }
zbus  = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
# hpdctl deliberately does not depend on hpd-dbus at *runtime* — see the
# module doc on `doctor::RIVAL_UNITS` — but a dev-only dependency lets a
# test cross-check that doctor's hand-mirrored mask list stays in sync
# with what hpd_dbus::conflicts actually detects, without adding any
# runtime coupling to the shipped `hpdctl` binary.
hpd-dbus = { path = "../hpd-dbus" }

[lints]
workspace = true
