[package]
name                 = "hpd-core"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true
description          = "Domain layer for hpd (L3): pure reducer + Executor + state machine + persistence."

[dependencies]
hpd-error        = { path = "../hpd-error" }
hpd-capabilities = { path = "../hpd-capabilities" }
tracing          = { workspace = true }
tokio            = { workspace = true, features = ["sync"] }
serde            = { workspace = true }
toml             = { workspace = true }

[dev-dependencies]
# Re-pulls hpd-capabilities with the `testing` feature so integration tests
# can use `hpd_capabilities::testing::MockBackend`. Cargo unifies features
# across normal + dev deps, so production builds remain unaffected.
hpd-capabilities = { path = "../hpd-capabilities", features = ["testing"] }
tokio = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "time", "fs"] }

[lints]
workspace = true
