[package]
name = "hpd-daemon"
version = "0.1.0"
edition = "2021"

[features]
default = ["vendor-asus"]
# Vendor selection: each flag pulls in one L1 backend crate. Multiple
# vendors can be active at once; main.rs picks the first one that matches
# the live DMI. With none enabled the daemon still builds but exits at
# startup since no backend can be selected.
vendor-asus   = ["dep:hpd-backend-asus"]
vendor-lenovo = ["dep:hpd-backend-lenovo"]
vendor-valve  = ["dep:hpd-backend-valve"]
# Build-time switch that compiles in the MockSysfs path used by
# `HPD_SIMULATOR=1` on macOS / dev hosts without real sysfs. Implies
# vendor-asus because today only the ASUS firmware surface is modelled.
simulator     = ["hpd-sysfs/mock", "vendor-asus"]

[dependencies]
# internal layers
hpd-capabilities = { path = "../hpd-capabilities" }
hpd-core = { path = "../hpd-core" }
hpd-sysfs = { path = "../hpd-sysfs" }
hpd-backend-asus   = { path = "../hpd-backend-asus",   optional = true }
hpd-backend-lenovo = { path = "../hpd-backend-lenovo", optional = true }
hpd-backend-valve  = { path = "../hpd-backend-valve",  optional = true }

# System tools
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }

hpd-dbus = { path = "../hpd-dbus" }
hpd-netlink = { path = "../hpd-netlink" }
zbus = "4.1"
futures-util = "0.3"
