[package]
name                 = "hpd-daemon"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true
description          = "hpd-daemon — long-running root service exposing dev.cirodev.hpd.PowerDaemon1 over D-Bus (layer L4)."

[features]
default = ["vendor-asus"]
# Vendor selection: each flag pulls in one L1 backend crate. Multiple
# vendors can be active at once; main.rs picks the first one that matches
# the live DMI. With none enabled the daemon still builds but exits at
# startup since no backend can be selected.
vendor-asus   = ["dep:hpd-backend-asus"]
# Build-time switch that compiles in the MockSysfs path used by
# `HPD_SIMULATOR=1` on macOS / dev hosts without real sysfs. Implies
# vendor-asus because today only the ASUS firmware surface is modelled.
simulator     = ["hpd-sysfs/mock", "vendor-asus", "hpd-dbus/simulator"]

[dependencies]
# internal layers
hpd-capabilities = { path = "../hpd-capabilities" }
hpd-core = { path = "../hpd-core" }
hpd-sysfs = { path = "../hpd-sysfs" }
hpd-backend-asus   = { path = "../hpd-backend-asus",   optional = true }

# System tools
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }

hpd-dbus     = { path = "../hpd-dbus" }
hpd-netlink  = { path = "../hpd-netlink" }
zbus         = { workspace = true }
futures-util = { workspace = true }

[lints]
workspace = true
