[package]
name                 = "hpd-dbus"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true
description          = "zbus interface exposing the hpd daemon over the system bus (layer L4)."

[features]
default = []
# When enabled, every `set_*` method short-circuits the polkit
# authorization check and returns `true`. Activated transitively by the
# daemon's `simulator` feature because session-bus runs (macOS / dev
# hosts) have no polkit authority to talk to.
simulator = []

[dependencies]
hpd-core         = { path = "../hpd-core" }
hpd-capabilities = { path = "../hpd-capabilities" }
zbus             = { workspace = true }
tokio            = { workspace = true, features = ["sync"] }
tracing          = { workspace = true }

[dev-dependencies]
# Strict XML parser for the introspection regression test. With
# `check_comments` enabled it rejects `--` inside `<!-- ... -->`, the exact
# rule Python's expat (used by the Decky plugin's dbus-next) enforces and
# that lenient parsers like libxml2 / gdbus silently tolerate.
quick-xml        = "0.36"
# Pull in `testing::MockBackend` so a `PowerDaemonInterface` can be built in
# the test and its introspection XML rendered.
hpd-capabilities = { path = "../hpd-capabilities", features = ["testing"] }

[lints]
workspace = true
