[package]
name                 = "hpd-dbus"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true
description          = "zbus interface exposing the hpd daemon over the system bus (layer L4)."

[features]
default = []
# When enabled, every `set_*` method short-circuits the polkit
# authorization check and returns `true`. Activated transitively by the
# daemon's `simulator` feature because session-bus runs (macOS / dev
# hosts) have no polkit authority to talk to.
simulator = []

[dependencies]
hpd-core         = { path = "../hpd-core" }
hpd-capabilities = { path = "../hpd-capabilities" }
zbus             = { workspace = true }
tokio            = { workspace = true, features = ["sync"] }
tracing          = { workspace = true }
# Only for the ppd_shim's NameOwnerChanged signal stream (`StreamExt::next`).
futures-util     = { workspace = true }

[dev-dependencies]
# Strict XML parser for the introspection regression test. With
# `check_comments` enabled it rejects `--` inside `<!-- ... -->`, the exact
# rule Python's expat (used by the Decky plugin's dbus-next) enforces and
# that lenient parsers like libxml2 / gdbus silently tolerate.
#
# Floor pinned to 0.41 (not the crate's MSRV floor) to clear two HIGH
# (7.5) RUSTSEC advisories in 0.36.2 — RUSTSEC-2026-0194 (quadratic
# runtime on duplicate start-tag attributes) and RUSTSEC-2026-0195
# (unbounded namespace-declaration allocation, memory-exhaustion DoS).
# Dev-only (never ships in the release binary), but `cargo audit` scans
# the full Cargo.lock including dev-deps, so an unpatched version still
# fails the supply-chain CI gate.
quick-xml        = "0.41"
# Pull in `testing::MockBackend` so a `PowerDaemonInterface` can be built in
# the test and its introspection XML rendered.
hpd-capabilities = { path = "../hpd-capabilities", features = ["testing"] }
# `[dependencies]` only needs `sync` (channels) for the production build;
# tests additionally need a runtime to drive `#[tokio::test]` async fns
# (e.g. calling `get_telemetry` directly).
tokio            = { workspace = true, features = ["rt", "macros"] }
# Only the test fixture below implements capability traits directly
# (`HpdError` is their shared `Result` error type); production code never
# needs to name it since every method it calls already returns `HpdError`.
hpd-error        = { path = "../hpd-error" }

[lints]
workspace = true
