[package]
name                 = "hpd-error"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true
description          = "Cross-crate error types for the hpd workspace (layer L-1)."

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
