[package]
name = "hpd-netlink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "net"] }
futures-util = "0.3"
tracing = "0.1"
hpd-core = { path = "../hpd-core" }

# Only download and compile udev on Linux
[target.'cfg(target_os = "linux")'.dependencies]
tokio-udev = "0.7"