[package]
name                 = "hpd-netlink"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
description          = "udev power-supply event monitor for hpd (layer L0; Linux-only, no-op stub on other platforms)."

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "net"] }
futures-util = "0.3"
tracing = "0.1"
hpd-core = { path = "../hpd-core" }

# Only download and compile udev on Linux
[target.'cfg(target_os = "linux")'.dependencies]
tokio-udev = "0.7"
