[package]
name                 = "hpd-netlink"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true
description          = "udev power-supply event monitor for hpd (layer L0; Linux-only, no-op stub on other platforms)."

[dependencies]
tokio        = { workspace = true, features = ["rt", "macros", "net", "time"] }
futures-util = { workspace = true }
tracing      = { workspace = true }
hpd-core     = { path = "../hpd-core" }

# Only download and compile udev on Linux.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-udev = { workspace = true }

[lints]
workspace = true
