[package]
name                 = "hpd-sysfs"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true
description          = "Sysfs I/O abstraction for hpd (layer L0): SysfsIo trait + RealSysfs + optional MockSysfs."

[features]
default = []
# Exposes the mock only if feature is active (used on tests of L1/L3)
mock = ["dep:tempfile"]

[dependencies]
hpd-error = { path = "../hpd-error" }
tracing = { workspace = true }
tempfile = { workspace = true, optional = true }
